--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -41,6 +41,20 @@ enum Versions {
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient(_PetStoreClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _PetStoreClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store import PetStoreClient
 
 client = PetStoreClient()
@@ -135,6 +149,29 @@ namespace Cats {
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient:
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated operations/_operations.py
+class DogsOperations:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+# generated cats/operations/_operations.py
+class CatsOperations:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store import PetStoreClient
 
 client = PetStoreClient()
@@ -242,6 +279,44 @@ interface Actions {
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient(_PetStoreClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated operations/_operations.py
+class _PetStoreClientOperationsMixin:
+
+    @distributed_trace
+    def info(self, **kwargs: Any) -> None:
+
+class BillingsOperations:
+
+    @distributed_trace
+    def history(self, **kwargs: Any) -> None:
+
+class ActionsOperations:
+
+    @distributed_trace
+    def open(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def close(self, **kwargs: Any) -> None:
+
+# generated pets/operations/_operations.py
+class PetsOperations:
+
+    @distributed_trace
+    def info(self, **kwargs: Any) -> None:
+
+class PetsActionsOperations:
+
+    @distributed_trace
+    def open(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def close(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store import PetStoreClient
 
 client = PetStoreClient()
@@ -402,12 +477,27 @@ import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
 using Azure.ClientGenerator.Core;
+using PetStore;
 
 @@clientLocation(Feeds.feed, PetStore);
 @@clientLocation(Pets.pet, PetStore);
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient(_PetStoreClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _PetStoreClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store import PetStoreClient
 
 client = PetStoreClient()
@@ -484,6 +574,20 @@ using Azure.ClientGenerator.Core;
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient(_PetStoreClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _PetStoreClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store import PetStoreGreatClient
 
 client = PetStoreGreatClient()
@@ -560,6 +664,20 @@ using Azure.ClientGenerator.Core;
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient(_PetStoreClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _PetStoreClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store_renamed import PetStoreClient
 
 client = PetStoreClient()
@@ -628,7 +746,7 @@ namespace PetStore;
 @route("/pet") op pet(): void;
 ```
 
-```typespec
+```typespec title="client.tsp"
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -654,6 +772,25 @@ interface Client2 {
 ```
 
 ```python
+# generated _client.py
+class FoodClient(_FoodClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+class PetActionClient(_PetActionClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _FoodClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+class _PetActionClientOperationsMixin
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store_renamed import FoodClient, PetActionClient
 
 client1 = FoodClient()
@@ -766,6 +903,22 @@ interface OpGrp2 {
 ```
 
 ```python
+# generated _client.py
+class PetStoreClient:
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated operations/_operations.py
+class OpGrp1Operations:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+class OpGrp2Operations:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store_renamed import PetStoreClient
 
 client = PetStoreClient()
@@ -869,6 +1022,27 @@ namespace PetAction {
 ```
 
 ```python
+# generated food/_client.py
+class FoodClient(_FoodClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated food/_operations/_operations.py
+class _FoodClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+# generated petaction/_client.py
+class PetActionClient(_PetActionClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated petaction/_operations/_operations.py
+class _PetActionClientOperationsMixin:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from new_pet_store.food import FoodClient
 from new_pet_store.pet_action import PetActionClient
 
@@ -981,6 +1155,27 @@ interface Client2 {
 ```
 
 ```python
+# generated _client.py
+class FoodClient(_FoodClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _FoodClientOperationsMixin:
+
+    @distributed_trace
+    def feed(self, **kwargs: Any) -> None:
+
+# generated subnamespace/_client.py
+class PetActionClient(_PetActionClientOperationsMixin):
+    def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
+
+# generated subnamespace/_operations/_operations.py
+class _PetActionClientOperationsMixin:
+
+    @distributed_trace
+    def pet(self, **kwargs: Any) -> None:
+
+#usage sample
 from pet_store_renamed import FoodClient
 from pet_store_renamed.sub_namespace import PetActionClient
 
@@ -1098,6 +1293,20 @@ model StorageClientOptions {
 ```
 
 ```python
+# generated _client.py
+class StorageClient(_StorageClientOperationsMixin):
+    def __init__(self, endpoint: str, blob_name: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _StorageClientOperationsMixin:
+
+    @distributed_trace
+    def upload(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def download(self, **kwargs: Any) -> None:
+
+#usage sample
 from storage import StorageClient
 
 client = StorageClient(endpoint="<my-endpoint>", blob_name="myBlobName", ...)
@@ -1195,6 +1404,20 @@ model StorageClientOptions {
 ```
 
 ```python
+# generated _client.py
+class StorageClient(_StorageClientOperationsMixin):
+    def __init__(self, endpoint: str, blob: str, **kwargs: Any) -> None: ...
+
+# generated _operations/_operations.py
+class _StorageClientOperationsMixin:
+
+    @distributed_trace
+    def upload(self, **kwargs: Any) -> None:
+
+    @distributed_trace
+    def download(self, **kwargs: Any) -> None:
+
+#usage sample
 from storage import StorageClient
 
 client = StorageClient(endpoint="<my-endpoint>", blob="myBlobName", ...)
